@startuml editor-mapa
title Diagrama de clases - Editor grafico de mapas (V1 simplificada)

skinparam classAttributeIconSize 0

' ============================================================================
' V1 SIMPLIFICADA:
'  - Mapa de tamano FIJO 30x16, tile 64x64 (constantes WIDTH/HEIGHT/TILE_SIZE).
'  - DOS capas fijas: Ground (0) y Buildings (1). Sin agregar/quitar/renombrar.
'  - Paleta por carga manual de PNGs (modelo firstgid).
'  - Herramientas: Pencil + Eraser + Fill.
'  - .bin guarda META + TILESETS + LAYERS (sin spawns/teleports todavia).
'  - Canvas QWidget + paintEvent (sin culling/zoom; el mapa entra entero).
' ============================================================================

class EditorWindow {
  - EditorDocument* document
  - MapCanvasWidget* canvas
  - TilePalette* tilePalette
  + newMap()
  + openMap()
  + saveMap()
  + saveMapAs()
  + selectActiveLayer(index)
}

note right of EditorWindow
  El selector de capa activa (Ground/Buildings)
  son 2 opciones en la toolbar; no hay
  LayerPanel ni NewMapDialog en V1.
end note

class EditorDocument {
  - Map map
  - ToolType activeTool
  - int activeGid
  - int activeLayer
  - bool dirty
  - QString path
  - vector<Command> undoStack
  - vector<Command> redoStack
  + setActiveTool()
  + setActiveGid()
  + setActiveLayer()
  + applyToolPress(x, y)
  + applyToolDrag(x, y)
  + applyToolRelease(x, y)
  + undo()
  + redo()
  + save(path)
  + open(path)
  + newMap()
}

class Map {
  - vector<Tileset> tilesets
  - vector<MapLayerData> layers   ' siempre 2: Ground, Buildings
  - unordered_map<int, TileDef> tileIndex
  + width()        ' WIDTH (30)
  + height()       ' HEIGHT (16)
  + tileSize()     ' TILE_SIZE (64)
  + addTileset()
  + nextFirstgid()
  + getCell(layer, x, y)
  + setCell(layer, x, y, gid)
  + isCollidable(x, y)
  + findTile(gid)
}

class MapCanvasWidget {
  - EditorDocument* document
  - TilesetPixmapCache cache
  + paintEvent()
  + mousePressEvent()
  + mouseMoveEvent()
  + mouseReleaseEvent()
}

note bottom of MapCanvasWidget
  QWidget con setFixedSize(30*64, 16*64).
  paintEvent recorre 16x30 por capa
  (Ground luego Buildings). Sin culling
  ni zoom: el mapa entra entero.
end note

class TilePalette {
  - EditorDocument* document
  + loadPng()
  + tileSelected(gid)
}

interface Tool {
  + onPress(map, layer, x, y, gid)
  + onDrag(map, layer, x, y, gid)
  + paintsOnDrag()
}

class PencilTool
class EraserTool
class FillTool

interface Command {
  + execute()
  + undo()
}

class SetTilesCommand {
  - Map* map
  - int layer
  - vector<CellChange> changes
  + execute()
  + undo()
}

' --- Persistencia: vive en common/. NO depende de Map (la usa tambien el server). ---
class BinaryMapSaver {
  + {static} save(path, tileSize, width, height, tilesets, layers)
}

class BinaryMapLoader {
  + load(path)
  + getTileSize()
  + getWidth()
  + getHeight()
  + isCollidable(x, y)
  + getSpawns()      ' vacio en V1
  + getTeleports()   ' vacio en V1
  + getTilesets()
  + getLayers()
  + findTile(gid)
}

note bottom of BinaryMapLoader
  Espeja la superficie publica de MapLoader.
  El server (ZoneWorld::load_terrain) puede
  consumir .bin con cambio minimo.
end note

N_FMT .. BinaryMapSaver
N_FMT .. BinaryMapLoader

class TilesetPixmapCache {
  + pixmapFor(gid)
  + sourceRectFor(gid)
}

class LoadTilesetDialog

' --- Relaciones -------------------------------------------------------------
EditorWindow --> EditorDocument
EditorWindow --> MapCanvasWidget
EditorWindow --> TilePalette
EditorWindow --> LoadTilesetDialog

MapCanvasWidget --> EditorDocument
TilePalette --> EditorDocument

EditorDocument *-- Map
EditorDocument --> Tool
EditorDocument --> Command
' El EditorDocument hace de puente: extrae los datos del Map para el Saver
' y reconstruye el Map desde el Loader. La persistencia NO conoce a Map.
EditorDocument ..> BinaryMapSaver : usa
EditorDocument ..> BinaryMapLoader : usa

Tool <|.. PencilTool
Tool <|.. EraserTool
Tool <|.. FillTool

Command <|.. SetTilesCommand
SetTilesCommand --> Map

MapCanvasWidget --> TilesetPixmapCache
TilesetPixmapCache --> Map

@enduml
